RESOLVED FIXED183136
[Web Animations] Ensure setting the hold time invalidates the timing model
https://bugs.webkit.org/show_bug.cgi?id=183136
Summary [Web Animations] Ensure setting the hold time invalidates the timing model
Antoine Quint
Reported 2018-02-26 11:00:38 PST
[Web Animations] Ensure setting the hold time invalidates the timing model
Attachments
Patch (21.43 KB, patch)
2018-02-26 11:03 PST, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2018-02-26 11:03:37 PST
Antoine Quint
Comment 2 2018-02-26 11:44:00 PST
Radar WebKit Bug Importer
Comment 3 2018-02-26 11:44:18 PST
Note You need to log in before you can comment on or make changes to this bug.